@@ -517,6 +517,8 @@ core-docs/gpl/Makefile
 core-docs/gpl/C/Makefile
 core-docs/lgpl/Makefile
 core-docs/lgpl/C/Makefile
+core-docs/gnome-feedback/Makefile
+core-docs/gnome-feedback/C/Makefile
 desktop-links/Makefile
 gnome-terminal/Makefile
 gnome-terminal/C/Makefile
