@@ -1,0 +1,8 @@
+figs =
+docname = gnome-feedback
+lang = C
+omffile = gnome-feedback-C.omf
+sgml_ents =
+include $(top_srcdir)/sgmldocs.make
+dist-hook: app-dist-hook
+
