@@ -1,0 +1,14 @@
+<?xml version="1.0" standalone="no"?>
+<omf>
+  <resource>
+    <title>
+      Reporting GNOME Bugs and Other Feedback
+    </title>
+    <subject>
+      <category>GNOME|Core Desktop</category>
+    </subject>
+    <format mime="text/sgml"/>
+    <identifier url="gnome-feedback.sgml"/>
+    <language code="C"/>
+  </resource>
+</omf>
