@@ -1,0 +1,139 @@
+<!DOCTYPE article PUBLIC "-//GNOME//DTD DocBook PNG Variant V1.1//EN"[
+]>
+
+<!-- =============Document Header ============================= -->
+
+<article id="index"> 
+  <artheader>
+    <title>Reporting GNOME bugs and other feedback</title>
+    <copyright>
+      <year>2001</year>
+      <holder>Gnome Documentation Project</holder>
+    </copyright>
+    <legalnotice id="legalnotice">
+      <para>
+        Permission is granted to copy, distribute and/or modify this
+        document under the terms of the <ulink type="help"
+        url="gnome-help:fdl"><citetitle>GNU Free Documentation
+        License</citetitle></ulink>, Version 1.1 or any later version
+        published by the Free Software Foundation with no Invariant
+        Sections, no Front-Cover Texts, and no Back-Cover Texts. You
+        may obtain a copy of the <citetitle>GNU Free Documentation
+        License</citetitle> from the Free Software Foundation by
+        visiting <ulink type="http" url="http://www.fsf.org">their Web
+        site</ulink> or by writing to: Free Software Foundation, Inc.,
+        59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.
+      </para>
+      <para>
+        Many of the names used by companies to distinguish their
+        products and services are claimed as trademarks. Where those
+        names appear in any GNOME documentation, and those trademarks
+        are made aware to the members of the GNOME Documentation
+        Project, the names have been printed in caps or initial caps.
+      </para>
+    </legalnotice>
+
+
+    <releaseinfo>
+       This is version 1.0 of gnome-feedback document
+    </releaseinfo>
+
+  </artheader>
+
+
+
+<!-- ============= DOCUMENT BODY ================================ -->
+
+ <sect1 id="feedback-main">
+  <title>Feedback information</title>
+    <sect2 id="bugreports">
+    <title>Reporting bugs</title>  
+
+      <para>
+     If you have found a bug in one of GNOME applications, please
+   report it! Developers do read all the bug reports and try to fix
+   these bugs. Please try to be as specific as possible when
+   describing the circumstances under which the bug shows (what
+   commands did you enter? which buttons did you click?). If there were any
+   error messages, be sure to include them, too.  
+      </para> 
+      <para>
+	The easiest way to report bugs is by using <application>Bug
+	  Report Tool</application> (<command>bug-buddy</command>),
+	  available in the <guisubmenu>Utilities</guisubmenu> submenu
+	  of <guimenu>Main Menu</guimenu>. This utility will guide you
+	  through the bug reporting process; it will also
+	  automatically collect some information necessary for
+	  developers, such as versions of the operating system and
+	  libraries you are using.
+      </para>
+      <para>
+	You can also submit bugs and browse the list of known bugs by
+	connecting to the <ulink type="http"
+	url="http://bugzilla.gnome.org/">GNOME bug tracking
+	database</ulink>.  You will need to register before you can
+	submit any bugs this way &mdash; and do not forget to read
+	<ulink type="http"
+	url="http://bugzilla.gnome.org/bugwritinghelp.html">Bug
+	Writing Guidelines</ulink>. 
+      </para>
+      
+      <para>
+	Please note that some of GNOME applications are developed by
+	commercial companies (these products are
+	still free software). For example,
+	<application>Nautilus</application> file manager is developed
+	by <ulink type="http" url="http://www.eazel.com">Eazel</ulink>
+	while <application>Evolution</application> groupware suite is
+	developed by <ulink type="http"
+	url="http://www.ximian.com">Ximian</ulink> (formerly Helix
+	Code). Bugs reports and comments about these products should
+	be directed to the respective companies. If you are using
+	<application>Bug Report Tool</application>, it will
+	automatically send bug reports to the correct database.   
+      </para>	
+
+
+    </sect2>
+    <sect2 id="wishlist"> 
+      <title>Suggestions and comments</title> 
+      <para> 
+	If you have a suggestion or want to request a new feature for
+      one of the applications, it can also be done using the bug
+      tracking database. Submit your suggestion as a bug report as
+      described in <xref linkend="bugreports"> and at the appropriate
+      step select <guilabel>Severity: Enhancement</guilabel>. 
+      </para>
+    </sect2>
+
+      <sect2 id="docs">
+      <title>Documentation comments</title>
+
+      <para> If you found an inaccuracy or misprint in one of GNOME
+	documents, or have any comments or suggestions about
+	documentation, please let us know! The easiest way of doing so
+	is by submitting a bug report as explained before and
+	selecting <guilabel>Component: docs</guilabel> at appropriate
+	steps (or <guilabel>general</guilabel> if there is no
+	<guilabel>docs</guilabel> component). If your comment is about
+	general GNOME documentation (such as <citetitle>GNOME Users
+	Guide</citetitle>) rather than specific application manual,
+	select <guilabel>Product: gnome-user-docs</guilabel>.
+      </para>
+      <para>
+	Alternatively, you can just send your comments by email to
+	<ulink type="http"
+	url="http://developer.gnome.org/projects/gdp/">GNOME
+	Documentation Project</ulink>; our address is
+	<email>docs@gnome.org</email>. And by the way: if you are not
+	a developer but want to help GNOME &mdash;
+	<ulink type="http"
+	url="http://developer.gnome.org/projects/gdp/join.html">join
+	the GDP</ulink> and help us  improve GNOME documentation.
+      </para>
+    </sect2>
+
+ </sect1>
+
+</article>
+
