@@ -1,3 +1,15 @@
+2001-04-19  Dan Mueth  <dan@eazel.com>
+
+	Adding Sasha's doc, "Reporting GNOME bugs and other feedback"
+	Alexander Kirillov <kirillov@math.sunysb.edu>
+
+	* configure.in:
+	* core-docs/Makefile.am:
+	* core-docs/gnome-feedback/C/Makefile.am:
+	* core-docs/gnome-feedback/C/gnome-feedback-C.omf:
+	* core-docs/gnome-feedback/C/gnome-feedback.sgml:
+	* core-docs/gnome-feedback/Makefile.am:
+
 2001-04-18  Stanislav Brabec  <utx@penguin.cz>
 
 	* configure.in, acconfig.h: Added test for
